// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeForm Renders default state 1`] = `
<div>
  <form
    id="exchange"
    name="exchange"
  >
    <fieldset>
      <legend>
        Pockets
      </legend>
      <div
        class="form-group"
      >
        <span
          style="display: inline-flex;"
        >
          <label
            for="from"
            style="text-transform: capitalize;"
          >
            from: 
          </label>
          <a
            class="pocket-currency-option"
            role="button"
          >
            EUR
          </a>
          <a
            class="pocket-currency-option active"
            role="button"
          >
            GBP
          </a>
          <a
            class="pocket-currency-option"
            role="button"
          >
            USD
          </a>
        </span>
        <input
          id="from"
          inputmode="decimal"
          max="58.33"
          min="0"
          name="from"
          pattern="[\\\\d\\\\.]*"
          required=""
          step="0.01"
          type="number"
          value=""
        />
        <div>
          You have £58.33
        </div>
      </div>
      <div
        class="form-group"
      >
        <span
          style="display: inline-flex;"
        >
          <label
            for="to"
            style="text-transform: capitalize;"
          >
            to: 
          </label>
          <a
            class="pocket-currency-option"
            role="button"
          >
            EUR
          </a>
          <a
            class="pocket-currency-option"
            role="button"
          >
            GBP
          </a>
          <a
            class="pocket-currency-option active"
            role="button"
          >
            USD
          </a>
        </span>
        <input
          id="to"
          inputmode="decimal"
          max="25.51"
          min="0"
          name="to"
          pattern="[\\\\d\\\\.]*"
          readonly=""
          step="0.01"
          tabindex="-1"
          type="number"
          value=""
        />
        <div>
          You have $25.51
        </div>
      </div>
      <div
        class="form-group"
        style="display: flex; justify-content: right;"
      >
        <button
          class="btn btn-ghost"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn btn-default"
          type="submit"
        >
          Exchange
        </button>
      </div>
    </fieldset>
  </form>
  <div
    class="terminal-prompt borderless-box"
  >
    <span
      class=""
      style="white-space: pre-wrap;"
    >
       
    </span>
  </div>
</div>
`;

exports[`ExchangeForm Renders error state 1`] = `
<div>
  <form
    id="exchange"
    name="exchange"
  >
    <fieldset>
      <legend>
        Pockets
      </legend>
      <div
        class="form-group"
      >
        <span
          style="display: inline-flex;"
        >
          <label
            for="from"
            style="text-transform: capitalize;"
          >
            from: 
          </label>
          <a
            class="pocket-currency-option"
            role="button"
          >
            EUR
          </a>
          <a
            class="pocket-currency-option active"
            role="button"
          >
            GBP
          </a>
          <a
            class="pocket-currency-option"
            role="button"
          >
            USD
          </a>
        </span>
        <input
          disabled=""
          id="from"
          inputmode="decimal"
          max="58.33"
          min="0"
          name="from"
          pattern="[\\\\d\\\\.]*"
          required=""
          step="0.01"
          type="number"
          value=""
        />
        <div>
          You have £58.33
        </div>
      </div>
      <div
        class="form-group"
      >
        <span
          style="display: inline-flex;"
        >
          <label
            for="to"
            style="text-transform: capitalize;"
          >
            to: 
          </label>
          <a
            class="pocket-currency-option"
            role="button"
          >
            EUR
          </a>
          <a
            class="pocket-currency-option"
            role="button"
          >
            GBP
          </a>
          <a
            class="pocket-currency-option active"
            role="button"
          >
            USD
          </a>
        </span>
        <input
          disabled=""
          id="to"
          inputmode="decimal"
          max="25.51"
          min="0"
          name="to"
          pattern="[\\\\d\\\\.]*"
          readonly=""
          step="0.01"
          tabindex="-1"
          type="number"
          value=""
        />
        <div>
          You have $25.51
        </div>
      </div>
      <div
        class="form-group"
        style="display: flex; justify-content: right;"
      >
        <button
          class="btn btn-ghost"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn btn-default"
          disabled=""
          type="submit"
        >
          Exchange
        </button>
      </div>
    </fieldset>
  </form>
  <div
    class="terminal-prompt borderless-box"
  >
    <span
      class="terminal-alert-error"
      style="white-space: pre-wrap;"
    >
      rawr!
    </span>
  </div>
</div>
`;
